--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18.16.0-alpine
 
 WORKDIR /home/node/app
 
-ADD package.json .
+ADD package*.json .
 RUN npm install
 
 CMD ["npm", "run", "dev"]
