(BE-Laravel): Added filtering capabilities for fetching articles, comments and tags with pest testing

--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:XN1oAS1M1xkGcvZJttIXWhx7TyKi9DPgCKPBwekl5fk=
+APP_KEY=base64:M9OL73q1tHtRhkJthJzVMnN2oAGk01dwWLV5NQqT23s=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
 DB_PORT=5432
-DB_DATABASE=testing
+DB_DATABASE=testing2
 DB_USERNAME=sail
 DB_PASSWORD=password
 
@@ -28,7 +28,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
+MAIL_MAILER=array
 MAIL_HOST=mailpit
 MAIL_PORT=1025
 MAIL_USERNAME=null
